# fast-api-ec-demo

./: .editorconfig  LICENSE  README.md
backend/: .gitignore
backend/app/: alembic.ini  debug.py  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: ee84e24a9d60_added_users_table.py
backend/app/resources/: .gitignore
backend/app/resources/config/: .env.sample  allow_origins.json.sample
backend/app/resources/config/logging/: root.yaml  sqlalchemy.yaml
backend/app/resources/db/seeds/: user.yaml
backend/app/src/: app_responses_schema.py  exceptions.py  init_app.py  main.py
backend/app/src/api/: deps.py
backend/app/src/api/v1/: api.py
backend/app/src/api/v1/routers/: login.py  users.py
backend/app/src/config/: settings.py
backend/app/src/crud/: base.py  crud_user.py
backend/app/src/db/: base.py  db_context_manager.py  seeds.py  session.py
backend/app/src/initializers/: __init__.py  cors_settings.py  logging.py
backend/app/src/models/: base.py  user.py
backend/app/src/schemas/: token.py  user.py
backend/app/src/util/: security.py  word_util.py
docs/: 需求.docx
frontend/: .env  .eslintrc.js  package.json  tsconfig.json  vue.config.js
frontend/src/: App.vue  api.ts  axios-interceptors.ts  index.d.ts  main.ts
frontend/src/components/: FormItemError.vue
frontend/src/layouts/: Footer.vue  Header.vue  Menu.vue
frontend/src/locales/: zh-cn.json
frontend/src/models/: User.ts
frontend/src/plugins/: element.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts  states.ts
(+15 files in other folders)
